--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,17 @@
 .App {
-  background-color:rgb(231, 209, 209);
+  background-color: bisque;
+  width: auto;
+  height: auto;
+}
+.card {
+  background-color:rgb(231, 195, 195);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  margin: 0px;
+  padding: 10px;
+}
+.container {
+  margin: 10px;
+  padding: 10px;
 }
